fix: incorrect box-shadow behavior / z-indexes

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -50,7 +50,7 @@ body{
 }
 
 html{
-    min-width: 390px;
+    min-width: 380px;
     max-width: 1440px;
     margin: 0 auto;
     overflow-x: hidden;
