--- a/src/scss/components/textures.scss
+++ b/src/scss/components/textures.scss
@@ -1,10 +1,10 @@
 .texture{
     position: absolute;
     display: inline-block;
-    width: 100vw;
+    width: 200vw;
     max-width: 1440px;
     height: 10px;
-    z-index: 2;
+    z-index: 4;
     background-color: var(--bg-color);
     left: 0;
 
